crates/ink/tests/ui/contract/fail/impl-block-namespace-invalid-identifier.stderr
error: encountered invalid Rust identifier for namespace argument
 --> tests/ui/contract/fail/impl-block-namespace-invalid-identifier.rs:6:23
  |
6 |     #[ink(namespace = "::invalid_identifier")]
  |                       ^^^^^^^^^^^^^^^^^^^^^^
